--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.7",
+    "@heroicons/vue": "^2.0.13",
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
