docs(README): create a README.md

--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sql": "./server/upSql.js"
+    "preinstall": "(cd back-end && npm install); (cd front-end && npm install)",
+    "install:apps": "(cd back-end && npm install); (cd front-end && npm install)",
+    "compose:up": "docker-compose up -d",
+    "compose:down": "docker-compose down",
+    "database": "npx sequelize db:migrate && npx sequelize db:seed:all"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/eemr3/desafio-cash-force.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Emerson Moreira",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/eemr3/desafio-cash-force/issues"
