--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,6 @@
-MYSQL_USER=aqui vai o nome do usuário do banco
-MYSQL_PASSWORD=aqui vai a senha do banco
-MYSQL_DATABASE=aqui vai o nome do banco
-MYSQL_HOST=aqui vai o host ex: localhost ou 127.0.0.1
+MYSQL_USER=root
+MYSQL_PASSWORD=12345678
+MYSQL_DATABASE=cashforce_v3
+MYSQL_HOST=localhost
 
 API_PORT=3001
