--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "preinstall": "(cd back-end && npm install); (cd front-end && npm install)",
-    "install:apps": "(cd back-end && npm install); (cd front-end && npm install)",
+    "preinstall": "(cd server && npm install); (cd web && npm install)",
+    "install:apps": "(cd server && npm install); (cd web && npm install)",
     "compose:up": "docker-compose up -d",
     "compose:down": "docker-compose down",
     "database": "npx sequelize db:migrate && npx sequelize db:seed:all"
